@@ -179,6 +179,12 @@ value_lazy (struct value *value)
   return value->lazy;
 }
 
+void
+set_value_lazy (struct value *value, int val)
+{
+  value->lazy = val;
+}
+
 const bfd_byte *
 value_contents (struct value *value)
 {
@@ -994,7 +1000,7 @@ value_primitive_field (struct value *arg1, int offset,
       v = allocate_value (value_enclosing_type (arg1));
       v->type = type;
       if (value_lazy (arg1))
-	VALUE_LAZY (v) = 1;
+	set_value_lazy (v, 1);
       else
 	memcpy (value_contents_all_raw (v), value_contents_all_raw (arg1),
 		TYPE_LENGTH (value_enclosing_type (arg1)));
@@ -1010,7 +1016,7 @@ value_primitive_field (struct value *arg1, int offset,
       offset += TYPE_FIELD_BITPOS (arg_type, fieldno) / 8;
       v = allocate_value (type);
       if (value_lazy (arg1))
-	VALUE_LAZY (v) = 1;
+	set_value_lazy (v, 1);
       else
 	memcpy (value_contents_raw (v),
 		value_contents_raw (arg1) + offset,
