@@ -1,3 +1,11 @@
+2005-02-07  Andrew Cagney  <cagney@gnu.org>
+
+	* value.h (VALUE_LAZY): Delete
+	(set_value_lazy): Declare.
+	* value.c (set_value_lazy): Define.
+	* valops.c, valarith.c, jv-valprint.c, jv-lang.c: Update.
+	* gnu-v2-abi.c, findvar.c, dwarf2loc.c, ada-lang.c: Update.
+
 2005-02-06  Andrew Cagney  <cagney@gnu.org>
 
 	* value.h (VALUE_OPTIMIZED_OUT): Delete.
